cabal-version: 3.0
name: geolite-api
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Zachary Churchill
maintainer: amartin@layer3com.com
build-type: Simple
extra-source-files: ChangeLog.md

executable geolite-api
  main-is:             Main.hs
  ghc-options: 
    -Wall 
    -Wwarn
    -O2
  other-modules:
    GeoliteApi.Types
    GeoliteApi.Siphon
  build-depends:
    , aeson >=1.5
    , aeson-pretty
    , base >=4.13 && <4.15
    , bytestring
    , bytestring-encodings
    , cmark
    , colonnade >=1.2.0.2
    , compact
    , containers
    , country
    , cron
    , data-default
    , deepseq
    , directory
    , ip >=1.7.0
    , modern-uri >=0.3.4.1
    , primitive >= 0.6.4.0
    , primitive-containers >=0.5
    , req >=0.3.9.1
    , scientific
    , scotty
    , siphon >=0.8.1
    , streaming
    , streaming-bytestring
    , text
    , text-short
    , transformers
    , unix
    , vector >=0.12
    , wai-extra
    , zip-archive
  hs-source-dirs:      src
  default-language: Haskell2010

